Various updates - Updating About page content - Updated base theme colors to support better contrast for ADA - Updated Footer content - Began work on making Header sticky and fixing collapse toggle bugs on window resize - Updated some global styles for anchor and paragraph tags - Removed max width style from "main" element, to allow manually opting in select components into max width rules.

--- a/styles/components/BlogPostList.module.scss
+++ b/styles/components/BlogPostList.module.scss
@@ -2,13 +2,10 @@
   @apply px-12;
   @apply py-4;
   @apply max-w-screen-2xl;
+  @apply mx-auto;
 
   @apply grid;
   @apply gap-8;
-
-  @screen 2xl {
-    @apply mx-auto;
-  }
 
   .post {
     position: relative;
