--- a/styles/main.css
+++ b/styles/main.css
@@ -6,8 +6,3 @@ html {
   @apply bg-white;
   @apply text-black;
 }
-
-main {
-  @apply max-w-screen-2xl;
-  @apply mx-auto;
-}
