--- a/styles/pages/About.module.scss
+++ b/styles/pages/About.module.scss
@@ -32,6 +32,7 @@
     @apply px-12;
     @apply py-4;
     @apply max-w-screen-2xl;
+    @apply mx-auto;
     @apply font-inter;
     font-size: 20px;
   }
